fixed dark mode issues

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav a.current {
 
 nav a:hover {
   border-bottom: 0.4em solid var(--color-accent);
-  background-color: oklch(from var(--color-accent) 95% 5% h);
+  background-color: oklch(from var(--color-accent) canvas h);
 }
 
 
